--- a/archives/toutiao-search/2023-11-18.md
+++ b/archives/toutiao-search/2023-11-18.md
@@ -1,59 +1,84 @@
 # 2023-11-18
 
-共 373 条
+共 393 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 18 2023 21:03:18 GMT+0800 (China Standard Time) -->
-1. [拜登毫无征兆的握手令印尼总统吃惊](https://so.toutiao.com/search?keyword=拜登毫无征兆的握手令印尼总统吃惊)
-1. [直击SpaceX“星舰”第二次试射](https://so.toutiao.com/search?keyword=直击SpaceX“星舰”第二次试射)
-1. [从西雅图到旧金山](https://so.toutiao.com/search?keyword=从西雅图到旧金山)
+<!-- 最后更新时间 Sat Nov 18 2023 22:00:45 GMT+0800 (China Standard Time) -->
 1. [媒体人：中日关系出现三个微妙变化](https://so.toutiao.com/search?keyword=媒体人：中日关系出现三个微妙变化)
-1. [吵架后一方脑溢血死亡家属索赔70万](https://so.toutiao.com/search?keyword=吵架后一方脑溢血死亡家属索赔70万)
-1. [茅奖作品《雪山大地》的创作契机](https://so.toutiao.com/search?keyword=茅奖作品《雪山大地》的创作契机)
 1. [美国前总统卡特夫妇接受临终关怀](https://so.toutiao.com/search?keyword=美国前总统卡特夫妇接受临终关怀)
+1. [从西雅图到旧金山](https://so.toutiao.com/search?keyword=从西雅图到旧金山)
 1. [马斯克再表态：中国一定会统一](https://so.toutiao.com/search?keyword=马斯克再表态：中国一定会统一)
-1. [市委书记运动会上做13个引体向上](https://so.toutiao.com/search?keyword=市委书记运动会上做13个引体向上)
-1. [OpenAI内乱的来龙去脉](https://so.toutiao.com/search?keyword=OpenAI内乱的来龙去脉)
+1. [茅奖作品《雪山大地》的创作契机](https://so.toutiao.com/search?keyword=茅奖作品《雪山大地》的创作契机)
+1. [女子租房一个月发现藏有摄像头](https://so.toutiao.com/search?keyword=女子租房一个月发现藏有摄像头)
+1. [超市老板娘深夜接异常订单果断报警](https://so.toutiao.com/search?keyword=超市老板娘深夜接异常订单果断报警)
+1. [被铁头举报新东方学校被责令停办](https://so.toutiao.com/search?keyword=被铁头举报新东方学校被责令停办)
+1. [媒体：马云家族“秘密花园”隐现](https://so.toutiao.com/search?keyword=媒体：马云家族“秘密花园”隐现)
 1. [官方辟谣重庆石堰将建机场](https://so.toutiao.com/search?keyword=官方辟谣重庆石堰将建机场)
+1. [SpaceX证实与“星舰”失联 其已自毁](https://so.toutiao.com/search?keyword=SpaceX证实与“星舰”失联+其已自毁)
+1. [直击SpaceX“星舰”第二次试射](https://so.toutiao.com/search?keyword=直击SpaceX“星舰”第二次试射)
 1. [大学教师非法购买农村宅基地被强执](https://so.toutiao.com/search?keyword=大学教师非法购买农村宅基地被强执)
-1. [从缅甸赎回男子埋怨为何把我搞回来](https://so.toutiao.com/search?keyword=从缅甸赎回男子埋怨为何把我搞回来)
-1. [揭秘制片主任工资能挣多少](https://so.toutiao.com/search?keyword=揭秘制片主任工资能挣多少)
-1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
-1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
-1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
-1. [女子梦见丈夫出轨调查发现是真的](https://so.toutiao.com/search?keyword=女子梦见丈夫出轨调查发现是真的)
 1. [景甜现场摸许凯腹肌](https://so.toutiao.com/search?keyword=景甜现场摸许凯腹肌)
-1. [青岛持续放宽居住落户政策](https://so.toutiao.com/search?keyword=青岛持续放宽居住落户政策)
+1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
+1. [揭秘制片主任工资能挣多少](https://so.toutiao.com/search?keyword=揭秘制片主任工资能挣多少)
+1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
+1. [《新闻女王》好会玩职场背刺这套](https://so.toutiao.com/search?keyword=《新闻女王》好会玩职场背刺这套)
+1. [日本赛刘雨辰欧烜屹大逆转晋级决赛](https://so.toutiao.com/search?keyword=日本赛刘雨辰欧烜屹大逆转晋级决赛)
+1. [张靓颖晒与刘亦菲自拍](https://so.toutiao.com/search?keyword=张靓颖晒与刘亦菲自拍)
 1. [以高官敦促以军“烧毁”加沙地带](https://so.toutiao.com/search?keyword=以高官敦促以军“烧毁”加沙地带)
 1. [马航MH370事件过去9年有哪些新进展](https://so.toutiao.com/search?keyword=马航MH370事件过去9年有哪些新进展)
 1. [比萨斜塔上出现巨幅巴勒斯坦国旗](https://so.toutiao.com/search?keyword=比萨斜塔上出现巨幅巴勒斯坦国旗)
-1. [张靓颖晒与刘亦菲自拍](https://so.toutiao.com/search?keyword=张靓颖晒与刘亦菲自拍)
-1. [《宁安如梦》成最新“电子榨菜”](https://so.toutiao.com/search?keyword=《宁安如梦》成最新“电子榨菜”)
+1. [女子买衣服等一年既不发货也不退款](https://so.toutiao.com/search?keyword=女子买衣服等一年既不发货也不退款)
+1. [妈妈攒2年猫毛亲手为猫咪做小被子](https://so.toutiao.com/search?keyword=妈妈攒2年猫毛亲手为猫咪做小被子)
 1. [美国犹太裔众议员呼吁巴以停火](https://so.toutiao.com/search?keyword=美国犹太裔众议员呼吁巴以停火)
-1. [媒体：马云家族“秘密花园”隐现](https://so.toutiao.com/search?keyword=媒体：马云家族“秘密花园”隐现)
+1. [宁夏中卫市海原县发生3.3级地震](https://so.toutiao.com/search?keyword=宁夏中卫市海原县发生3.3级地震)
+1. [深圳一小鹏汽车从二楼坠落](https://so.toutiao.com/search?keyword=深圳一小鹏汽车从二楼坠落)
+1. [小区遛狗未牵绳 狗扑倒小孩才牵狗](https://so.toutiao.com/search?keyword=小区遛狗未牵绳+狗扑倒小孩才牵狗)
+1. [B站通报一起“人肉开盒”案例](https://so.toutiao.com/search?keyword=B站通报一起“人肉开盒”案例)
+1. [女子梦见丈夫出轨调查发现是真的](https://so.toutiao.com/search?keyword=女子梦见丈夫出轨调查发现是真的)
+1. [女子发烧咳嗽不见好查出支原体肺炎](https://so.toutiao.com/search?keyword=女子发烧咳嗽不见好查出支原体肺炎)
+1. [薛之谦儿子透风又暖心](https://so.toutiao.com/search?keyword=薛之谦儿子透风又暖心)
+1. [甄嬛传主创重聚](https://so.toutiao.com/search?keyword=甄嬛传主创重聚)
+1. [家属称老人已去世民警多看一眼救回](https://so.toutiao.com/search?keyword=家属称老人已去世民警多看一眼救回)
+1. [4支球队已从NBA季中锦标赛中出局](https://so.toutiao.com/search?keyword=4支球队已从NBA季中锦标赛中出局)
+1. [王鹤棣亲手认证白鹿发量](https://so.toutiao.com/search?keyword=王鹤棣亲手认证白鹿发量)
+1. [陈茂波出席APEC峰会](https://so.toutiao.com/search?keyword=陈茂波出席APEC峰会)
+1. [干饭最积极的猫咪](https://so.toutiao.com/search?keyword=干饭最积极的猫咪)
+1. [甄嬛传为何成剧迷心中的“白月光”](https://so.toutiao.com/search?keyword=甄嬛传为何成剧迷心中的“白月光”)
+1. [哈方：确保上合区域稳定是优先事项](https://so.toutiao.com/search?keyword=哈方：确保上合区域稳定是优先事项)
+1. [研究生夸大杜撰宣传自己事迹被通报](https://so.toutiao.com/search?keyword=研究生夸大杜撰宣传自己事迹被通报)
+1. [女童800米跑出3分11秒 教练发声](https://so.toutiao.com/search?keyword=女童800米跑出3分11秒+教练发声)
+1. [缅甸超市中国籍老板娘被绑架](https://so.toutiao.com/search?keyword=缅甸超市中国籍老板娘被绑架)
+1. [教育部回应汉语拼音“o”读法](https://so.toutiao.com/search?keyword=教育部回应汉语拼音“o”读法)
+1. [前10个月我国吸收外资9870.1亿元](https://so.toutiao.com/search?keyword=前10个月我国吸收外资9870.1亿元)
+1. [养生课上老师带50余学生炖药膳鸡汤](https://so.toutiao.com/search?keyword=养生课上老师带50余学生炖药膳鸡汤)
+1. [宝宝第一次说话清晰地叫了一声哥](https://so.toutiao.com/search?keyword=宝宝第一次说话清晰地叫了一声哥)
+1. [冬天该吃贵州烙锅了](https://so.toutiao.com/search?keyword=冬天该吃贵州烙锅了)
+1. [河北多地将启动重污染Ⅱ级应急响应](https://so.toutiao.com/search?keyword=河北多地将启动重污染Ⅱ级应急响应)
+1. [拜登毫无征兆的握手令印尼总统吃惊](https://so.toutiao.com/search?keyword=拜登毫无征兆的握手令印尼总统吃惊)
+1. [吵架后一方脑溢血死亡家属索赔70万](https://so.toutiao.com/search?keyword=吵架后一方脑溢血死亡家属索赔70万)
+1. [市委书记运动会上做13个引体向上](https://so.toutiao.com/search?keyword=市委书记运动会上做13个引体向上)
+1. [OpenAI内乱的来龙去脉](https://so.toutiao.com/search?keyword=OpenAI内乱的来龙去脉)
+1. [从缅甸赎回男子埋怨为何把我搞回来](https://so.toutiao.com/search?keyword=从缅甸赎回男子埋怨为何把我搞回来)
+1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
+1. [青岛持续放宽居住落户政策](https://so.toutiao.com/search?keyword=青岛持续放宽居住落户政策)
+1. [《宁安如梦》成最新“电子榨菜”](https://so.toutiao.com/search?keyword=《宁安如梦》成最新“电子榨菜”)
 1. [共青团深圳市委书记任某国企一把手](https://so.toutiao.com/search?keyword=共青团深圳市委书记任某国企一把手)
 1. [工行上海市分行原行长被终身禁业](https://so.toutiao.com/search?keyword=工行上海市分行原行长被终身禁业)
 1. [原来辛芷蕾私底下这么温柔](https://so.toutiao.com/search?keyword=原来辛芷蕾私底下这么温柔)
-1. [教育部回应汉语拼音“o”读法](https://so.toutiao.com/search?keyword=教育部回应汉语拼音“o”读法)
 1. [普京：搞排他性令当今国际局势紧张](https://so.toutiao.com/search?keyword=普京：搞排他性令当今国际局势紧张)
 1. [辽宁同日通报处分5名厅官](https://so.toutiao.com/search?keyword=辽宁同日通报处分5名厅官)
 1. [四川广元烂尾楼困局](https://so.toutiao.com/search?keyword=四川广元烂尾楼困局)
 1. [“85后”干部房栋拟任新职](https://so.toutiao.com/search?keyword=“85后”干部房栋拟任新职)
-1. [女童800米跑出3分11秒 教练发声](https://so.toutiao.com/search?keyword=女童800米跑出3分11秒+教练发声)
 1. [曝有近2万名男子为躲避征兵逃离乌](https://so.toutiao.com/search?keyword=曝有近2万名男子为躲避征兵逃离乌)
 1. [福建泉州一风景区发生火灾](https://so.toutiao.com/search?keyword=福建泉州一风景区发生火灾)
-1. [妈妈攒2年猫毛亲手为猫咪做小被子](https://so.toutiao.com/search?keyword=妈妈攒2年猫毛亲手为猫咪做小被子)
 1. [理想汽车刘杰：将挑战豪车销量第一](https://so.toutiao.com/search?keyword=理想汽车刘杰：将挑战豪车销量第一)
 1. [警方公布滞留境外涉诈重点人员照片](https://so.toutiao.com/search?keyword=警方公布滞留境外涉诈重点人员照片)
 1. [特斯拉下周将继续上调中国市场售价](https://so.toutiao.com/search?keyword=特斯拉下周将继续上调中国市场售价)
 1. [洪灏：明年A股或延续今年局面](https://so.toutiao.com/search?keyword=洪灏：明年A股或延续今年局面)
 1. [奥特曼被OpenAI董事会罢免细节曝光](https://so.toutiao.com/search?keyword=奥特曼被OpenAI董事会罢免细节曝光)
-1. [缅甸超市中国籍老板娘被绑架](https://so.toutiao.com/search?keyword=缅甸超市中国籍老板娘被绑架)
 1. [英媒解释为何曼城还没受到处罚](https://so.toutiao.com/search?keyword=英媒解释为何曼城还没受到处罚)
 1. [外商加码对华投资](https://so.toutiao.com/search?keyword=外商加码对华投资)
-1. [深圳一小鹏汽车从二楼坠落](https://so.toutiao.com/search?keyword=深圳一小鹏汽车从二楼坠落)
 1. [生态环境部刘志全被查](https://so.toutiao.com/search?keyword=生态环境部刘志全被查)
-1. [前10个月我国吸收外资9870.1亿元](https://so.toutiao.com/search?keyword=前10个月我国吸收外资9870.1亿元)
 1. [习近平结束中美元首会晤回到北京](https://so.toutiao.com/search?keyword=习近平结束中美元首会晤回到北京)
 1. [共同应答亚太发展“三问”](https://so.toutiao.com/search?keyword=共同应答亚太发展“三问”)
 1. [孕妇吃火锅拉了一下凳子手指被切断](https://so.toutiao.com/search?keyword=孕妇吃火锅拉了一下凳子手指被切断)
@@ -71,7 +96,6 @@
 1. [刘亦菲自称张靓颖粉丝](https://so.toutiao.com/search?keyword=刘亦菲自称张靓颖粉丝)
 1. [普京：若法国想加入金砖俄方会研究](https://so.toutiao.com/search?keyword=普京：若法国想加入金砖俄方会研究)
 1. [安徽省委书记赴金寨县调研](https://so.toutiao.com/search?keyword=安徽省委书记赴金寨县调研)
-1. [家属称老人已去世民警多看一眼救回](https://so.toutiao.com/search?keyword=家属称老人已去世民警多看一眼救回)
 1. [官方：坚决打击恶意开盒挂人行为](https://so.toutiao.com/search?keyword=官方：坚决打击恶意开盒挂人行为)
 1. [律师：严格来说蹭暖也违法](https://so.toutiao.com/search?keyword=律师：严格来说蹭暖也违法)
 1. [浙江气温19日起大回升](https://so.toutiao.com/search?keyword=浙江气温19日起大回升)
@@ -92,7 +116,6 @@
 1. [韩媒：中国男足的更新换代失败了](https://so.toutiao.com/search?keyword=韩媒：中国男足的更新换代失败了)
 1. [遇拜登出行封路 岸田一行只好步行](https://so.toutiao.com/search?keyword=遇拜登出行封路+岸田一行只好步行)
 1. [花99.8万买到凶宅起诉卖家退回23万](https://so.toutiao.com/search?keyword=花99.8万买到凶宅起诉卖家退回23万)
-1. [B站通报一起“人肉开盒”案例](https://so.toutiao.com/search?keyword=B站通报一起“人肉开盒”案例)
 1. [凯迪拉克CELESTIQ量产版亮相](https://so.toutiao.com/search?keyword=凯迪拉克CELESTIQ量产版亮相)
 1. [OpenAI新CEO什么来路](https://so.toutiao.com/search?keyword=OpenAI新CEO什么来路)
 1. [普京：俄罗斯支持和平](https://so.toutiao.com/search?keyword=普京：俄罗斯支持和平)
@@ -102,7 +125,6 @@
 1. [森特股份董事长正配合相关部门调查](https://so.toutiao.com/search?keyword=森特股份董事长正配合相关部门调查)
 1. [英媒：大熊猫阳光和甜甜12月回中国](https://so.toutiao.com/search?keyword=英媒：大熊猫阳光和甜甜12月回中国)
 1. [内蒙古女篮众将更衣室庆祝胜利](https://so.toutiao.com/search?keyword=内蒙古女篮众将更衣室庆祝胜利)
-1. [薛之谦儿子透风又暖心](https://so.toutiao.com/search?keyword=薛之谦儿子透风又暖心)
 1. [哈登3+1准绝杀 快船胜火箭止6连败](https://so.toutiao.com/search?keyword=哈登3+1准绝杀+快船胜火箭止6连败)
 1. [比亚迪宋L预售订单超11000辆](https://so.toutiao.com/search?keyword=比亚迪宋L预售订单超11000辆)
 1. [小卡谈杰伦·格林16投5中](https://so.toutiao.com/search?keyword=小卡谈杰伦·格林16投5中)
@@ -186,7 +208,6 @@
 1. [互联网夜校能替代传统课堂吗](https://so.toutiao.com/search?keyword=互联网夜校能替代传统课堂吗)
 1. [卡德罗夫在射击场检验儿子枪法](https://so.toutiao.com/search?keyword=卡德罗夫在射击场检验儿子枪法)
 1. [快船：球队已正式与中锋泰斯签约](https://so.toutiao.com/search?keyword=快船：球队已正式与中锋泰斯签约)
-1. [王鹤棣亲手认证白鹿发量](https://so.toutiao.com/search?keyword=王鹤棣亲手认证白鹿发量)
 1. [央行等三部门：加大保交楼金融支持](https://so.toutiao.com/search?keyword=央行等三部门：加大保交楼金融支持)
 1. [阿来称《小王子》比所有童话都伟大](https://so.toutiao.com/search?keyword=阿来称《小王子》比所有童话都伟大)
 1. [证监会修订首次发行股票监管规定](https://so.toutiao.com/search?keyword=证监会修订首次发行股票监管规定)
@@ -196,7 +217,6 @@
 1. [詹姆斯35+5+9 湖人轻取开拓者](https://so.toutiao.com/search?keyword=詹姆斯35+5+9+湖人轻取开拓者)
 1. [医生举报科室为拿回扣用贵40倍注射液](https://so.toutiao.com/search?keyword=医生举报科室为拿回扣用贵40倍注射液)
 1. [ChatGPT之父：中国在AI领域会很出色](https://so.toutiao.com/search?keyword=ChatGPT之父：中国在AI领域会很出色)
-1. [干饭最积极的猫咪](https://so.toutiao.com/search?keyword=干饭最积极的猫咪)
 1. [iCAR 03亮相2023广州车展](https://so.toutiao.com/search?keyword=iCAR+03亮相2023广州车展)
 1. [总台记者探访波乌边境](https://so.toutiao.com/search?keyword=总台记者探访波乌边境)
 1. [2岁男童患白血病随时有生命危险](https://so.toutiao.com/search?keyword=2岁男童患白血病随时有生命危险)
