--- a/archives/toutiao-search/2023-11-19.md
+++ b/archives/toutiao-search/2023-11-19.md
@@ -1,71 +1,88 @@
 # 2023-11-19
 
-共 146 条
+共 157 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 19 2023 10:21:43 GMT+0800 (China Standard Time) -->
-1. [国足对韩国拿分是全队不变的目标](https://so.toutiao.com/search?keyword=国足对韩国拿分是全队不变的目标)
+<!-- 最后更新时间 Sun Nov 19 2023 11:01:07 GMT+0800 (China Standard Time) -->
 1. [老人坐轮椅横穿马路还示意车辆让行](https://so.toutiao.com/search?keyword=老人坐轮椅横穿马路还示意车辆让行)
-1. [从西雅图到旧金山](https://so.toutiao.com/search?keyword=从西雅图到旧金山)
-1. [媒体人：中日关系出现三个微妙变化](https://so.toutiao.com/search?keyword=媒体人：中日关系出现三个微妙变化)
+1. [中方要求日方全力搜救落水中国渔民](https://so.toutiao.com/search?keyword=中方要求日方全力搜救落水中国渔民)
+1. [世界遗产保护与合作中的中国贡献](https://so.toutiao.com/search?keyword=世界遗产保护与合作中的中国贡献)
 1. [马斯克再表态：中国一定会统一](https://so.toutiao.com/search?keyword=马斯克再表态：中国一定会统一)
-1. [父女对话聊爸爸心中唯一的美女是谁](https://so.toutiao.com/search?keyword=父女对话聊爸爸心中唯一的美女是谁)
-1. [茅奖作品《雪山大地》的创作契机](https://so.toutiao.com/search?keyword=茅奖作品《雪山大地》的创作契机)
-1. [钱塘江上演“人潮”追逐战](https://so.toutiao.com/search?keyword=钱塘江上演“人潮”追逐战)
 1. [媒体：马云自称不退场](https://so.toutiao.com/search?keyword=媒体：马云自称不退场)
+1. [茅奖作品《雪山大地》的创作契机](https://so.toutiao.com/search?keyword=茅奖作品《雪山大地》的创作契机)
+1. [马尔代夫正式要求印度撤军](https://so.toutiao.com/search?keyword=马尔代夫正式要求印度撤军)
+1. [M19遗骸确认为崔海治烈士](https://so.toutiao.com/search?keyword=M19遗骸确认为崔海治烈士)
+1. [青岛宣布租房即可落户](https://so.toutiao.com/search?keyword=青岛宣布租房即可落户)
 1. [官方辟谣重庆石堰将建机场](https://so.toutiao.com/search?keyword=官方辟谣重庆石堰将建机场)
 1. [SpaceX证实与“星舰”失联 其已自毁](https://so.toutiao.com/search?keyword=SpaceX证实与“星舰”失联+其已自毁)
+1. [媒体细数缅北五大家族关系网](https://so.toutiao.com/search?keyword=媒体细数缅北五大家族关系网)
 1. [渔政回应云梦泽公司违规捕捞](https://so.toutiao.com/search?keyword=渔政回应云梦泽公司违规捕捞)
-1. [揭秘制片主任工资能挣多少](https://so.toutiao.com/search?keyword=揭秘制片主任工资能挣多少)
+1. [父女对话聊爸爸心中唯一的美女是谁](https://so.toutiao.com/search?keyword=父女对话聊爸爸心中唯一的美女是谁)
+1. [梁咏琪街头live](https://so.toutiao.com/search?keyword=梁咏琪街头live)
 1. [B站通报一起“人肉开盒”案例](https://so.toutiao.com/search?keyword=B站通报一起“人肉开盒”案例)
-1. [物理老师用沙子画出声音的样子](https://so.toutiao.com/search?keyword=物理老师用沙子画出声音的样子)
-1. [互换特产送出活羊一只](https://so.toutiao.com/search?keyword=互换特产送出活羊一只)
-1. [小学男生课间跳舞惊艳周围同学](https://so.toutiao.com/search?keyword=小学男生课间跳舞惊艳周围同学)
-1. [全新一代BMW 5系实拍解析](https://so.toutiao.com/search?keyword=全新一代BMW+5系实拍解析)
-1. [中方要求日方全力搜救落水中国渔民](https://so.toutiao.com/search?keyword=中方要求日方全力搜救落水中国渔民)
+1. [老板喜提大G烟花彩炮摆满一条街](https://so.toutiao.com/search?keyword=老板喜提大G烟花彩炮摆满一条街)
+1. [90后小伙跳水救人不幸遇难](https://so.toutiao.com/search?keyword=90后小伙跳水救人不幸遇难)
 1. [引众怒的“性感女外卖员”道歉了](https://so.toutiao.com/search?keyword=引众怒的“性感女外卖员”道歉了)
+1. [时速1000公里高速飞车试验线主体完工](https://so.toutiao.com/search?keyword=时速1000公里高速飞车试验线主体完工)
+1. [哈马斯发视频称包围以特种兵藏身地](https://so.toutiao.com/search?keyword=哈马斯发视频称包围以特种兵藏身地)
+1. [全国最牛钉子楼拆了](https://so.toutiao.com/search?keyword=全国最牛钉子楼拆了)
+1. [物理老师用沙子画出声音的样子](https://so.toutiao.com/search?keyword=物理老师用沙子画出声音的样子)
+1. [女子租房一个月发现藏有摄像头](https://so.toutiao.com/search?keyword=女子租房一个月发现藏有摄像头)
+1. [男子朋友圈骂人被人找上门掌掴](https://so.toutiao.com/search?keyword=男子朋友圈骂人被人找上门掌掴)
+1. [马路发生交通事故男子崩溃大叫](https://so.toutiao.com/search?keyword=马路发生交通事故男子崩溃大叫)
+1. [上一支单场进14球的国家队是日本](https://so.toutiao.com/search?keyword=上一支单场进14球的国家队是日本)
+1. [全新一代BMW 5系实拍解析](https://so.toutiao.com/search?keyword=全新一代BMW+5系实拍解析)
+1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
+1. [微信群里留的遗嘱有效吗？法院判了](https://so.toutiao.com/search?keyword=微信群里留的遗嘱有效吗？法院判了)
+1. [网传仰望U8在道路上“四脚朝天”](https://so.toutiao.com/search?keyword=网传仰望U8在道路上“四脚朝天”)
+1. [女子梦见丈夫出轨调查发现是真的](https://so.toutiao.com/search?keyword=女子梦见丈夫出轨调查发现是真的)
+1. [张靓颖晒与刘亦菲自拍](https://so.toutiao.com/search?keyword=张靓颖晒与刘亦菲自拍)
+1. [周深玩跷跷板玩到飞起来了](https://so.toutiao.com/search?keyword=周深玩跷跷板玩到飞起来了)
+1. [小学男生课间跳舞惊艳周围同学](https://so.toutiao.com/search?keyword=小学男生课间跳舞惊艳周围同学)
+1. [秦始皇帝陵文物专家谈修复地下兵团](https://so.toutiao.com/search?keyword=秦始皇帝陵文物专家谈修复地下兵团)
+1. [张钧甯方否认年底结婚](https://so.toutiao.com/search?keyword=张钧甯方否认年底结婚)
+1. [深圳一小鹏汽车从二楼坠落](https://so.toutiao.com/search?keyword=深圳一小鹏汽车从二楼坠落)
+1. [江西一正厅级干部被双开：品行恶劣](https://so.toutiao.com/search?keyword=江西一正厅级干部被双开：品行恶劣)
+1. [粉丝坐快艇喊范丞丞我爱你](https://so.toutiao.com/search?keyword=粉丝坐快艇喊范丞丞我爱你)
+1. [传OpenAI与奥特曼讨论重返CEO](https://so.toutiao.com/search?keyword=传OpenAI与奥特曼讨论重返CEO)
+1. [超市老板娘深夜接异常订单果断报警](https://so.toutiao.com/search?keyword=超市老板娘深夜接异常订单果断报警)
+1. [互换特产送出活羊一只](https://so.toutiao.com/search?keyword=互换特产送出活羊一只)
+1. [女子嫁10年从没做过饭](https://so.toutiao.com/search?keyword=女子嫁10年从没做过饭)
+1. [全新奔驰GLC轿跑亮相广州车展](https://so.toutiao.com/search?keyword=全新奔驰GLC轿跑亮相广州车展)
+1. [比萨斜塔上出现巨幅巴勒斯坦国旗](https://so.toutiao.com/search?keyword=比萨斜塔上出现巨幅巴勒斯坦国旗)
+1. [申京：约基奇是怪物](https://so.toutiao.com/search?keyword=申京：约基奇是怪物)
+1. [油价将调整 加50升油或省13.5-15元](https://so.toutiao.com/search?keyword=油价将调整+加50升油或省13.5-15元)
+1. [女子婚内出轨后想带私生子回归家庭](https://so.toutiao.com/search?keyword=女子婚内出轨后想带私生子回归家庭)
+1. [宝妈分享萌娃奇葩睡姿](https://so.toutiao.com/search?keyword=宝妈分享萌娃奇葩睡姿)
+1. [国足对韩国拿分是全队不变的目标](https://so.toutiao.com/search?keyword=国足对韩国拿分是全队不变的目标)
+1. [从西雅图到旧金山](https://so.toutiao.com/search?keyword=从西雅图到旧金山)
+1. [媒体人：中日关系出现三个微妙变化](https://so.toutiao.com/search?keyword=媒体人：中日关系出现三个微妙变化)
+1. [钱塘江上演“人潮”追逐战](https://so.toutiao.com/search?keyword=钱塘江上演“人潮”追逐战)
+1. [揭秘制片主任工资能挣多少](https://so.toutiao.com/search?keyword=揭秘制片主任工资能挣多少)
 1. [埃尔多安批以军事行动 朔尔茨反驳](https://so.toutiao.com/search?keyword=埃尔多安批以军事行动+朔尔茨反驳)
-1. [M19遗骸确认为崔海治烈士](https://so.toutiao.com/search?keyword=M19遗骸确认为崔海治烈士)
 1. [私募洛克资本老板疑似“卷款跑路”](https://so.toutiao.com/search?keyword=私募洛克资本老板疑似“卷款跑路”)
 1. [以称尚未就释放被扣押人员达成协议](https://so.toutiao.com/search?keyword=以称尚未就释放被扣押人员达成协议)
-1. [时速1000公里高速飞车试验线主体完工](https://so.toutiao.com/search?keyword=时速1000公里高速飞车试验线主体完工)
 1. [这就是我向往的老年生活](https://so.toutiao.com/search?keyword=这就是我向往的老年生活)
-1. [哈马斯发视频称包围以特种兵藏身地](https://so.toutiao.com/search?keyword=哈马斯发视频称包围以特种兵藏身地)
-1. [女子租房一个月发现藏有摄像头](https://so.toutiao.com/search?keyword=女子租房一个月发现藏有摄像头)
-1. [女子梦见丈夫出轨调查发现是真的](https://so.toutiao.com/search?keyword=女子梦见丈夫出轨调查发现是真的)
 1. [朔尔茨发言 埃尔多安听了摇头](https://so.toutiao.com/search?keyword=朔尔茨发言+埃尔多安听了摇头)
 1. [范丞丞被粉丝喊话不要做显眼包](https://so.toutiao.com/search?keyword=范丞丞被粉丝喊话不要做显眼包)
-1. [90后小伙跳水救人不幸遇难](https://so.toutiao.com/search?keyword=90后小伙跳水救人不幸遇难)
 1. [约旦等国谴责以方袭击加沙地带学校](https://so.toutiao.com/search?keyword=约旦等国谴责以方袭击加沙地带学校)
-1. [马尔代夫正式要求印度撤军](https://so.toutiao.com/search?keyword=马尔代夫正式要求印度撤军)
 1. [官方回应多位太原网友称有震感](https://so.toutiao.com/search?keyword=官方回应多位太原网友称有震感)
 1. [以军将在加沙地带南部开展地面行动](https://so.toutiao.com/search?keyword=以军将在加沙地带南部开展地面行动)
-1. [马路发生交通事故男子崩溃大叫](https://so.toutiao.com/search?keyword=马路发生交通事故男子崩溃大叫)
 1. [克宫：普京掌握情报西方或会搞破坏](https://so.toutiao.com/search?keyword=克宫：普京掌握情报西方或会搞破坏)
 1. [以军袭击难民营学校 至少100人死亡](https://so.toutiao.com/search?keyword=以军袭击难民营学校+至少100人死亡)
 1. [江苏女排3-1战胜辽宁女排](https://so.toutiao.com/search?keyword=江苏女排3-1战胜辽宁女排)
-1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
-1. [张靓颖晒与刘亦菲自拍](https://so.toutiao.com/search?keyword=张靓颖晒与刘亦菲自拍)
-1. [网传仰望U8在道路上“四脚朝天”](https://so.toutiao.com/search?keyword=网传仰望U8在道路上“四脚朝天”)
 1. [德国主帅：哈弗茨那球不是点球](https://so.toutiao.com/search?keyword=德国主帅：哈弗茨那球不是点球)
-1. [超市老板娘深夜接异常订单果断报警](https://so.toutiao.com/search?keyword=超市老板娘深夜接异常订单果断报警)
 1. [张艺兴2023大航海巡演·成都站彩排](https://so.toutiao.com/search?keyword=张艺兴2023大航海巡演·成都站彩排)
-1. [全国最牛钉子楼拆了](https://so.toutiao.com/search?keyword=全国最牛钉子楼拆了)
-1. [青岛宣布租房即可落户](https://so.toutiao.com/search?keyword=青岛宣布租房即可落户)
-1. [深圳一小鹏汽车从二楼坠落](https://so.toutiao.com/search?keyword=深圳一小鹏汽车从二楼坠落)
 1. [罗马尼亚2-1以色列晋级欧洲杯](https://so.toutiao.com/search?keyword=罗马尼亚2-1以色列晋级欧洲杯)
 1. [广州车展硬派SUV新车盘点](https://so.toutiao.com/search?keyword=广州车展硬派SUV新车盘点)
 1. [家属称老人已去世民警多看一眼救回](https://so.toutiao.com/search?keyword=家属称老人已去世民警多看一眼救回)
 1. [姆巴佩戴帽 法国14-0血洗直布罗陀](https://so.toutiao.com/search?keyword=姆巴佩戴帽+法国14-0血洗直布罗陀)
-1. [梁咏琪街头live](https://so.toutiao.com/search?keyword=梁咏琪街头live)
 1. [哈马斯称以军袭击致超1.2万人死亡](https://so.toutiao.com/search?keyword=哈马斯称以军袭击致超1.2万人死亡)
 1. [向朝阳反向追爱杨简](https://so.toutiao.com/search?keyword=向朝阳反向追爱杨简)
 1. [低于最低工资计算加班费？法院判了](https://so.toutiao.com/search?keyword=低于最低工资计算加班费？法院判了)
-1. [女子婚内出轨后想带私生子回归家庭](https://so.toutiao.com/search?keyword=女子婚内出轨后想带私生子回归家庭)
 1. [德国总理朔尔茨呼吁在加沙地带停火](https://so.toutiao.com/search?keyword=德国总理朔尔茨呼吁在加沙地带停火)
 1. [欧预赛：荷兰1-0爱尔兰提前出线](https://so.toutiao.com/search?keyword=欧预赛：荷兰1-0爱尔兰提前出线)
 1. [山西：彻查致26死火灾原因严肃追责](https://so.toutiao.com/search?keyword=山西：彻查致26死火灾原因严肃追责)
-1. [男子朋友圈骂人被人找上门掌掴](https://so.toutiao.com/search?keyword=男子朋友圈骂人被人找上门掌掴)
 1. [吉鲁替补出场打进2球](https://so.toutiao.com/search?keyword=吉鲁替补出场打进2球)
 1. [以军袭击难民营一学校 哈马斯回应](https://so.toutiao.com/search?keyword=以军袭击难民营一学校+哈马斯回应)
 1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
@@ -80,15 +97,11 @@
 1. [四川篮协回应“城市联赛冲突事件”](https://so.toutiao.com/search?keyword=四川篮协回应“城市联赛冲突事件”)
 1. [评弹表演艺术家蒋云仙感染新冠去世](https://so.toutiao.com/search?keyword=评弹表演艺术家蒋云仙感染新冠去世)
 1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
-1. [比萨斜塔上出现巨幅巴勒斯坦国旗](https://so.toutiao.com/search?keyword=比萨斜塔上出现巨幅巴勒斯坦国旗)
 1. [女子买衣服等一年既不发货也不退款](https://so.toutiao.com/search?keyword=女子买衣服等一年既不发货也不退款)
 1. [薛之谦儿子透风又暖心](https://so.toutiao.com/search?keyword=薛之谦儿子透风又暖心)
-1. [秦始皇帝陵文物专家谈修复地下兵团](https://so.toutiao.com/search?keyword=秦始皇帝陵文物专家谈修复地下兵团)
-1. [全新奔驰GLC轿跑亮相广州车展](https://so.toutiao.com/search?keyword=全新奔驰GLC轿跑亮相广州车展)
 1. [宝宝第一次说话清晰地叫了一声哥](https://so.toutiao.com/search?keyword=宝宝第一次说话清晰地叫了一声哥)
 1. [刘亦菲舒淇同场活动](https://so.toutiao.com/search?keyword=刘亦菲舒淇同场活动)
 1. [鹦鹉练习歌谣被嫌吵顶嘴太可爱](https://so.toutiao.com/search?keyword=鹦鹉练习歌谣被嫌吵顶嘴太可爱)
-1. [老板喜提大G烟花彩炮摆满一条街](https://so.toutiao.com/search?keyword=老板喜提大G烟花彩炮摆满一条街)
 1. [官方：坚决打击恶意开盒挂人行为](https://so.toutiao.com/search?keyword=官方：坚决打击恶意开盒挂人行为)
 1. [银行疯抢“个人养老金”](https://so.toutiao.com/search?keyword=银行疯抢“个人养老金”)
 1. [教育部回应汉语拼音“o”读法](https://so.toutiao.com/search?keyword=教育部回应汉语拼音“o”读法)
@@ -97,7 +110,6 @@
 1. [张柏芝包场为幼子庆生](https://so.toutiao.com/search?keyword=张柏芝包场为幼子庆生)
 1. [1200亩农田因人为阻挠未能及时播种](https://so.toutiao.com/search?keyword=1200亩农田因人为阻挠未能及时播种)
 1. [美国前总统卡特夫妇接受临终关怀](https://so.toutiao.com/search?keyword=美国前总统卡特夫妇接受临终关怀)
-1. [宝妈分享萌娃奇葩睡姿](https://so.toutiao.com/search?keyword=宝妈分享萌娃奇葩睡姿)
 1. [迪拜遭雷暴大雨袭击城市严重内涝](https://so.toutiao.com/search?keyword=迪拜遭雷暴大雨袭击城市严重内涝)
 1. [中央气象台继续发布大风蓝色预警](https://so.toutiao.com/search?keyword=中央气象台继续发布大风蓝色预警)
 1. [蓝盈莹：浣碧回来了](https://so.toutiao.com/search?keyword=蓝盈莹：浣碧回来了)
@@ -117,7 +129,6 @@
 1. [山东深度布局工业母机产业](https://so.toutiao.com/search?keyword=山东深度布局工业母机产业)
 1. [张晚意新剧每说一句我心梗一下](https://so.toutiao.com/search?keyword=张晚意新剧每说一句我心梗一下)
 1. [高通骁龙7 Gen 3正式发布](https://so.toutiao.com/search?keyword=高通骁龙7+Gen 3正式发布)
-1. [张钧甯方否认年底结婚](https://so.toutiao.com/search?keyword=张钧甯方否认年底结婚)
 1. [华为算力概念龙头热度高](https://so.toutiao.com/search?keyword=华为算力概念龙头热度高)
 1. [韩国瑜痛批民进党：满脑子贪污](https://so.toutiao.com/search?keyword=韩国瑜痛批民进党：满脑子贪污)
 1. [干饭最积极的猫咪](https://so.toutiao.com/search?keyword=干饭最积极的猫咪)
