--- a/archives/toutiao-search/2023-11-19.md
+++ b/archives/toutiao-search/2023-11-19.md
@@ -1,59 +1,77 @@
 # 2023-11-19
 
-共 309 条
+共 326 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 19 2023 19:00:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Nov 19 2023 20:07:57 GMT+0800 (China Standard Time) -->
 1. [超级老声总决赛唱响长沙](https://so.toutiao.com/search?keyword=超级老声总决赛唱响长沙)
-1. [俄媒称一名乌军飞行员驾机向俄投诚](https://so.toutiao.com/search?keyword=俄媒称一名乌军飞行员驾机向俄投诚)
+1. [英雄联盟S13总决赛：T1战胜WBG夺冠](https://so.toutiao.com/search?keyword=英雄联盟S13总决赛：T1战胜WBG夺冠)
 1. [粮食增产农民增收 有这几笔账支撑](https://so.toutiao.com/search?keyword=粮食增产农民增收+有这几笔账支撑)
-1. [马航MH370事件有哪些谜团被揭开](https://so.toutiao.com/search?keyword=马航MH370事件有哪些谜团被揭开)
-1. [一起见证S13冠军诞生](https://so.toutiao.com/search?keyword=一起见证S13冠军诞生)
+1. [冲锋衣销量猛涨](https://so.toutiao.com/search?keyword=冲锋衣销量猛涨)
 1. [男子丢30万手机女子捡到以为老年机](https://so.toutiao.com/search?keyword=男子丢30万手机女子捡到以为老年机)
 1. [马代驱逐印军队 媒体：印遭当头一棒](https://so.toutiao.com/search?keyword=马代驱逐印军队+媒体：印遭当头一棒)
-1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
-1. [女子摆拍300斤大葱不到40元被约谈](https://so.toutiao.com/search?keyword=女子摆拍300斤大葱不到40元被约谈)
-1. [男子因螺蛳粉里没有螺蛳要求退钱](https://so.toutiao.com/search?keyword=男子因螺蛳粉里没有螺蛳要求退钱)
+1. [研究生捐眼角膜离世前一天发圈感谢](https://so.toutiao.com/search?keyword=研究生捐眼角膜离世前一天发圈感谢)
+1. [茅奖得主揭秘《宝水》中的原型人物](https://so.toutiao.com/search?keyword=茅奖得主揭秘《宝水》中的原型人物)
+1. [四川考古发现：确认苏东坡家族墓地](https://so.toutiao.com/search?keyword=四川考古发现：确认苏东坡家族墓地)
+1. [75岁司机遇溜车用肉身挡车被压身亡](https://so.toutiao.com/search?keyword=75岁司机遇溜车用肉身挡车被压身亡)
 1. [深圳停发失业保险金？官方辟谣](https://so.toutiao.com/search?keyword=深圳停发失业保险金？官方辟谣)
 1. [以军袭击难民营一学校 哈马斯回应](https://so.toutiao.com/search?keyword=以军袭击难民营一学校+哈马斯回应)
-1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
 1. [SpaceX证实与“星舰”失联 其已自毁](https://so.toutiao.com/search?keyword=SpaceX证实与“星舰”失联+其已自毁)
-1. [郭富城赛车场失控撞车](https://so.toutiao.com/search?keyword=郭富城赛车场失控撞车)
-1. [演员董晴结婚](https://so.toutiao.com/search?keyword=演员董晴结婚)
+1. [业主将车停在车位上频频遭开门杀](https://so.toutiao.com/search?keyword=业主将车停在车位上频频遭开门杀)
 1. [文章马伊琍一家四口罕见同框](https://so.toutiao.com/search?keyword=文章马伊琍一家四口罕见同框)
-1. [女子9年花费近27万吃海底捞](https://so.toutiao.com/search?keyword=女子9年花费近27万吃海底捞)
 1. [渔政回应云梦泽公司违规捕捞](https://so.toutiao.com/search?keyword=渔政回应云梦泽公司违规捕捞)
-1. [胡歌刘涛争论野外用完厕纸是否带走](https://so.toutiao.com/search?keyword=胡歌刘涛争论野外用完厕纸是否带走)
+1. [Zeus拿下S13世界赛FMVP](https://so.toutiao.com/search?keyword=Zeus拿下S13世界赛FMVP)
+1. [周润发挑战半马](https://so.toutiao.com/search?keyword=周润发挑战半马)
+1. [女子9年花费近27万吃海底捞](https://so.toutiao.com/search?keyword=女子9年花费近27万吃海底捞)
+1. [第十一届茅盾文学奖颁奖典礼](https://so.toutiao.com/search?keyword=第十一届茅盾文学奖颁奖典礼)
 1. [以军将在加沙地带南部开展地面行动](https://so.toutiao.com/search?keyword=以军将在加沙地带南部开展地面行动)
-1. [茅奖得主揭秘《宝水》中的原型人物](https://so.toutiao.com/search?keyword=茅奖得主揭秘《宝水》中的原型人物)
+1. [Faker时隔7年再登顶](https://so.toutiao.com/search?keyword=Faker时隔7年再登顶)
+1. [胡歌刘涛争论野外用完厕纸是否带走](https://so.toutiao.com/search?keyword=胡歌刘涛争论野外用完厕纸是否带走)
+1. [李佳航恭喜T1夺冠](https://so.toutiao.com/search?keyword=李佳航恭喜T1夺冠)
+1. [山东冠县：严厉整治配阴婚行为](https://so.toutiao.com/search?keyword=山东冠县：严厉整治配阴婚行为)
+1. [父女对话聊爸爸心中唯一的美女是谁](https://so.toutiao.com/search?keyword=父女对话聊爸爸心中唯一的美女是谁)
+1. [睡觉时这4个表现说明尿酸或已超标](https://so.toutiao.com/search?keyword=睡觉时这4个表现说明尿酸或已超标)
+1. [近四成中小学生抱怨学校午饭吃太晚](https://so.toutiao.com/search?keyword=近四成中小学生抱怨学校午饭吃太晚)
+1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
+1. [克宫：普京掌握情报西方或会搞破坏](https://so.toutiao.com/search?keyword=克宫：普京掌握情报西方或会搞破坏)
+1. [女子摆拍300斤大葱不到40元被约谈](https://so.toutiao.com/search?keyword=女子摆拍300斤大葱不到40元被约谈)
+1. [切特今日砍下36分10板5助攻2三分](https://so.toutiao.com/search?keyword=切特今日砍下36分10板5助攻2三分)
+1. [演员董晴结婚](https://so.toutiao.com/search?keyword=演员董晴结婚)
+1. [郭富城赛车场失控撞车](https://so.toutiao.com/search?keyword=郭富城赛车场失控撞车)
+1. [男子因螺蛳粉里没有螺蛳要求退钱](https://so.toutiao.com/search?keyword=男子因螺蛳粉里没有螺蛳要求退钱)
+1. [无人机拍下牧羊人雪中倒影好似将军](https://so.toutiao.com/search?keyword=无人机拍下牧羊人雪中倒影好似将军)
+1. [胡歌与导演组争执该不该进可可西里](https://so.toutiao.com/search?keyword=胡歌与导演组争执该不该进可可西里)
+1. [腾冲2023年马拉松](https://so.toutiao.com/search?keyword=腾冲2023年马拉松)
+1. [浙江一家4人查出同种癌 最小才16岁](https://so.toutiao.com/search?keyword=浙江一家4人查出同种癌+最小才16岁)
+1. [韩媒：中国队“少林足球”臭名昭著](https://so.toutiao.com/search?keyword=韩媒：中国队“少林足球”臭名昭著)
+1. [马航MH370事件有哪些谜团被揭开](https://so.toutiao.com/search?keyword=马航MH370事件有哪些谜团被揭开)
+1. [江口沉银遗址已出水文物7.6万余件](https://so.toutiao.com/search?keyword=江口沉银遗址已出水文物7.6万余件)
+1. [汪顺5米跳台表演“炸鱼”](https://so.toutiao.com/search?keyword=汪顺5米跳台表演“炸鱼”)
+1. [文班谈生涯新高的8封盖](https://so.toutiao.com/search?keyword=文班谈生涯新高的8封盖)
+1. [马斯克称将提起“核弹式诉讼”](https://so.toutiao.com/search?keyword=马斯克称将提起“核弹式诉讼”)
+1. [英媒：中东将出现新的力量平衡](https://so.toutiao.com/search?keyword=英媒：中东将出现新的力量平衡)
+1. [周润发说跑半马不累沿途打招呼累](https://so.toutiao.com/search?keyword=周润发说跑半马不累沿途打招呼累)
+1. [英财政大臣：英国通胀问题出现转折](https://so.toutiao.com/search?keyword=英财政大臣：英国通胀问题出现转折)
+1. [90后小伙跳水救人不幸遇难](https://so.toutiao.com/search?keyword=90后小伙跳水救人不幸遇难)
+1. [官方首次披露4名厅级干部被查处](https://so.toutiao.com/search?keyword=官方首次披露4名厅级干部被查处)
+1. [俄媒称一名乌军飞行员驾机向俄投诚](https://so.toutiao.com/search?keyword=俄媒称一名乌军飞行员驾机向俄投诚)
+1. [一起见证S13冠军诞生](https://so.toutiao.com/search?keyword=一起见证S13冠军诞生)
+1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
 1. [专家：绿营不分区名单暴露派系内斗](https://so.toutiao.com/search?keyword=专家：绿营不分区名单暴露派系内斗)
 1. [哈马斯发视频称包围以特种兵藏身地](https://so.toutiao.com/search?keyword=哈马斯发视频称包围以特种兵藏身地)
 1. [扬科维奇提要求：以全满状态战韩国](https://so.toutiao.com/search?keyword=扬科维奇提要求：以全满状态战韩国)
-1. [近四成中小学生抱怨学校午饭吃太晚](https://so.toutiao.com/search?keyword=近四成中小学生抱怨学校午饭吃太晚)
-1. [山东冠县：严厉整治配阴婚行为](https://so.toutiao.com/search?keyword=山东冠县：严厉整治配阴婚行为)
 1. [女子租房一个月发现藏有摄像头](https://so.toutiao.com/search?keyword=女子租房一个月发现藏有摄像头)
 1. [女子婚内出轨后想带私生子回归家庭](https://so.toutiao.com/search?keyword=女子婚内出轨后想带私生子回归家庭)
-1. [浙江一家4人查出同种癌 最小才16岁](https://so.toutiao.com/search?keyword=浙江一家4人查出同种癌+最小才16岁)
 1. [女子染发致头皮感染患上银屑病](https://so.toutiao.com/search?keyword=女子染发致头皮感染患上银屑病)
-1. [周润发挑战半马](https://so.toutiao.com/search?keyword=周润发挑战半马)
-1. [父女对话聊爸爸心中唯一的美女是谁](https://so.toutiao.com/search?keyword=父女对话聊爸爸心中唯一的美女是谁)
-1. [冲锋衣销量猛涨](https://so.toutiao.com/search?keyword=冲锋衣销量猛涨)
-1. [睡觉时这4个表现说明尿酸或已超标](https://so.toutiao.com/search?keyword=睡觉时这4个表现说明尿酸或已超标)
-1. [克宫：普京掌握情报西方或会搞破坏](https://so.toutiao.com/search?keyword=克宫：普京掌握情报西方或会搞破坏)
 1. [蒋林出任西北大学党委书记](https://so.toutiao.com/search?keyword=蒋林出任西北大学党委书记)
-1. [业主将车停在车位上频频遭开门杀](https://so.toutiao.com/search?keyword=业主将车停在车位上频频遭开门杀)
 1. [蔡正元：美国应支持中国和平统一](https://so.toutiao.com/search?keyword=蔡正元：美国应支持中国和平统一)
 1. [胡歌刘涛陈龙清唱向云端](https://so.toutiao.com/search?keyword=胡歌刘涛陈龙清唱向云端)
-1. [官方首次披露4名厅级干部被查处](https://so.toutiao.com/search?keyword=官方首次披露4名厅级干部被查处)
-1. [韩媒：中国队“少林足球”臭名昭著](https://so.toutiao.com/search?keyword=韩媒：中国队“少林足球”臭名昭著)
 1. [华为Mate60 Pro量子密话终端亮相](https://so.toutiao.com/search?keyword=华为Mate60+Pro量子密话终端亮相)
-1. [四川考古发现：确认苏东坡家族墓地](https://so.toutiao.com/search?keyword=四川考古发现：确认苏东坡家族墓地)
 1. [路虎卫士V8家族上市](https://so.toutiao.com/search?keyword=路虎卫士V8家族上市)
 1. [多地高校督促学生上课“坐前排”](https://so.toutiao.com/search?keyword=多地高校督促学生上课“坐前排”)
 1. [迪拜航展上观众找中国飞行员要签名](https://so.toutiao.com/search?keyword=迪拜航展上观众找中国飞行员要签名)
 1. [体验卫士90大V8版](https://so.toutiao.com/search?keyword=体验卫士90大V8版)
 1. [油价将调整 加50升油或省13.5-15元](https://so.toutiao.com/search?keyword=油价将调整+加50升油或省13.5-15元)
-1. [汪顺5米跳台表演“炸鱼”](https://so.toutiao.com/search?keyword=汪顺5米跳台表演“炸鱼”)
 1. [多角度看“星舰”助推器爆炸瞬间](https://so.toutiao.com/search?keyword=多角度看“星舰”助推器爆炸瞬间)
 1. [江西南丰房屋倒塌 当地：里面没人](https://so.toutiao.com/search?keyword=江西南丰房屋倒塌+当地：里面没人)
 1. [狗狗吐胆汁胃里发现有20多颗石头](https://so.toutiao.com/search?keyword=狗狗吐胆汁胃里发现有20多颗石头)
@@ -132,7 +150,6 @@
 1. [乌称在第聂伯河东岸击退俄12次进攻](https://so.toutiao.com/search?keyword=乌称在第聂伯河东岸击退俄12次进攻)
 1. [张靓颖晒与刘亦菲自拍](https://so.toutiao.com/search?keyword=张靓颖晒与刘亦菲自拍)
 1. [黑人小哥在伦敦海底捞扯面很丝滑](https://so.toutiao.com/search?keyword=黑人小哥在伦敦海底捞扯面很丝滑)
-1. [90后小伙跳水救人不幸遇难](https://so.toutiao.com/search?keyword=90后小伙跳水救人不幸遇难)
 1. [官方回应游客被交通局员工强迫换车](https://so.toutiao.com/search?keyword=官方回应游客被交通局员工强迫换车)
 1. [扬科维奇谈韦世豪：我需要个性球员](https://so.toutiao.com/search?keyword=扬科维奇谈韦世豪：我需要个性球员)
 1. [男子骗走朋友200余万买彩票全亏光](https://so.toutiao.com/search?keyword=男子骗走朋友200余万买彩票全亏光)
