--- a/archives/toutiao-search/2023-11-20.md
+++ b/archives/toutiao-search/2023-11-20.md
@@ -1,50 +1,78 @@
 # 2023-11-20
 
-共 311 条
+共 333 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Nov 20 2023 18:00:41 GMT+0800 (China Standard Time) -->
-1. [OpenAI创始人奥特曼加入微软](https://so.toutiao.com/search?keyword=OpenAI创始人奥特曼加入微软)
+<!-- 最后更新时间 Mon Nov 20 2023 19:00:39 GMT+0800 (China Standard Time) -->
+1. [阿根廷“特朗普”当选是拉美大乱征兆吗](https://so.toutiao.com/search?keyword=阿根廷“特朗普”当选是拉美大乱征兆吗)
 1. [香港535名拒宣誓政府雇员已离职](https://so.toutiao.com/search?keyword=香港535名拒宣誓政府雇员已离职)
 1. [中国电商助力非洲民众奔向美好生活](https://so.toutiao.com/search?keyword=中国电商助力非洲民众奔向美好生活)
-1. [副部级官员降为科员9年后二次被查](https://so.toutiao.com/search?keyword=副部级官员降为科员9年后二次被查)
+1. [专家解读人民币连续暴力拉升](https://so.toutiao.com/search?keyword=专家解读人民币连续暴力拉升)
 1. [水庆霞卸任中国女足主帅](https://so.toutiao.com/search?keyword=水庆霞卸任中国女足主帅)
-1. [特朗普祝贺“阿根廷特朗普”当选总统](https://so.toutiao.com/search?keyword=特朗普祝贺“阿根廷特朗普”当选总统)
-1. [专家：人民币或将进入正式升值通道](https://so.toutiao.com/search?keyword=专家：人民币或将进入正式升值通道)
+1. [哈维尔·米莱当选阿根廷新一任总统](https://so.toutiao.com/search?keyword=哈维尔·米莱当选阿根廷新一任总统)
+1. [澳方称中国军舰声呐伤人 中方回应](https://so.toutiao.com/search?keyword=澳方称中国军舰声呐伤人+中方回应)
 1. [研究：人类最佳睡眠时长竟不是8小时](https://so.toutiao.com/search?keyword=研究：人类最佳睡眠时长竟不是8小时)
+1. [特朗普祝贺“阿根廷特朗普”当选总统](https://so.toutiao.com/search?keyword=特朗普祝贺“阿根廷特朗普”当选总统)
+1. [广西多地飞鸟盘旋是地震前兆？假的](https://so.toutiao.com/search?keyword=广西多地飞鸟盘旋是地震前兆？假的)
+1. [乌尔善取关封神所有演员](https://so.toutiao.com/search?keyword=乌尔善取关封神所有演员)
+1. [副部级官员降为科员9年后二次被查](https://so.toutiao.com/search?keyword=副部级官员降为科员9年后二次被查)
+1. [专家：人民币或将进入正式升值通道](https://so.toutiao.com/search?keyword=专家：人民币或将进入正式升值通道)
+1. [韩媒：国足防守粗糙犯规多](https://so.toutiao.com/search?keyword=韩媒：国足防守粗糙犯规多)
+1. [媒体：2024对决特朗普 拜登危矣](https://so.toutiao.com/search?keyword=媒体：2024对决特朗普+拜登危矣)
+1. [河南联通回应强迫用户更换光猫](https://so.toutiao.com/search?keyword=河南联通回应强迫用户更换光猫)
 1. [中方谈韩总统涉华言论：别指手画脚](https://so.toutiao.com/search?keyword=中方谈韩总统涉华言论：别指手画脚)
+1. [药物养殖的罗氏虾是狠科技吗](https://so.toutiao.com/search?keyword=药物养殖的罗氏虾是狠科技吗)
+1. [阿根廷不会加入金砖国家？中方回应](https://so.toutiao.com/search?keyword=阿根廷不会加入金砖国家？中方回应)
+1. [教育部拟同意设置5所本科高等学校](https://so.toutiao.com/search?keyword=教育部拟同意设置5所本科高等学校)
+1. [朝鲜导弹技术取得重大突破](https://so.toutiao.com/search?keyword=朝鲜导弹技术取得重大突破)
+1. [南宁“桂花牌”手表突然爆火](https://so.toutiao.com/search?keyword=南宁“桂花牌”手表突然爆火)
+1. [鸿蒙系统明年或不兼容安卓](https://so.toutiao.com/search?keyword=鸿蒙系统明年或不兼容安卓)
+1. [女子疑坠楼身亡：孩子刚出生不久](https://so.toutiao.com/search?keyword=女子疑坠楼身亡：孩子刚出生不久)
+1. [白岩松谈四川一地规定不叠被子罚款](https://so.toutiao.com/search?keyword=白岩松谈四川一地规定不叠被子罚款)
+1. [男子长期健身后食用蛋白粉查出肾虚](https://so.toutiao.com/search?keyword=男子长期健身后食用蛋白粉查出肾虚)
+1. [美批准对日出售战斧导弹 中方回应](https://so.toutiao.com/search?keyword=美批准对日出售战斧导弹+中方回应)
+1. [胡锡进谈王自如奉承董明珠事件](https://so.toutiao.com/search?keyword=胡锡进谈王自如奉承董明珠事件)
+1. [《似火流年》彪子开启监狱副本](https://so.toutiao.com/search?keyword=《似火流年》彪子开启监狱副本)
+1. [24岁演员吴迪飞宣布退圈](https://so.toutiao.com/search?keyword=24岁演员吴迪飞宣布退圈)
+1. [扬科维奇：希望球队对得起国民期待](https://so.toutiao.com/search?keyword=扬科维奇：希望球队对得起国民期待)
+1. [澳大利亚碰瓷中国海军声呐有何图谋](https://so.toutiao.com/search?keyword=澳大利亚碰瓷中国海军声呐有何图谋)
+1. [外交部谴责针对平民儿童的暴力袭击](https://so.toutiao.com/search?keyword=外交部谴责针对平民儿童的暴力袭击)
+1. [扬科维奇赛前：不光要防守孙兴慜](https://so.toutiao.com/search?keyword=扬科维奇赛前：不光要防守孙兴慜)
+1. [男子1万元私房钱被盗](https://so.toutiao.com/search?keyword=男子1万元私房钱被盗)
+1. [水庆霞卸任后寄语女足](https://so.toutiao.com/search?keyword=水庆霞卸任后寄语女足)
+1. [杜兰特、马尔卡宁对飚高分赛后拥抱](https://so.toutiao.com/search?keyword=杜兰特、马尔卡宁对飚高分赛后拥抱)
+1. [邱毅：蓝白合成局机会仍很大](https://so.toutiao.com/search?keyword=邱毅：蓝白合成局机会仍很大)
+1. [云南对缅甸果敢发故障停电通知](https://so.toutiao.com/search?keyword=云南对缅甸果敢发故障停电通知)
+1. [奥特曼回应加入微软：任务仍在继续](https://so.toutiao.com/search?keyword=奥特曼回应加入微软：任务仍在继续)
+1. [小朋友跳“科目三” 网友：C位请单飞](https://so.toutiao.com/search?keyword=小朋友跳“科目三”+网友：C位请单飞)
+1. [呼吸道传染病交织 抗生素被滥用了吗](https://so.toutiao.com/search?keyword=呼吸道传染病交织+抗生素被滥用了吗)
+1. [两岁萌娃和大爷对打乒乓球](https://so.toutiao.com/search?keyword=两岁萌娃和大爷对打乒乓球)
+1. [詹姆斯浓眉里夫斯三人合计41投30中](https://so.toutiao.com/search?keyword=詹姆斯浓眉里夫斯三人合计41投30中)
+1. [明星为电诈家族站台庆生违法吗](https://so.toutiao.com/search?keyword=明星为电诈家族站台庆生违法吗)
+1. [碧桂园地产新增被执行人信息](https://so.toutiao.com/search?keyword=碧桂园地产新增被执行人信息)
+1. [李佳航恭喜T1夺冠](https://so.toutiao.com/search?keyword=李佳航恭喜T1夺冠)
+1. [汤普森六连败期间命中率仅31%](https://so.toutiao.com/search?keyword=汤普森六连败期间命中率仅31%)
+1. [《我本是高山》首轮口碑](https://so.toutiao.com/search?keyword=《我本是高山》首轮口碑)
+1. [男乘客拍打女列车员臀部被拘10日](https://so.toutiao.com/search?keyword=男乘客拍打女列车员臀部被拘10日)
+1. [OpenAI创始人奥特曼加入微软](https://so.toutiao.com/search?keyword=OpenAI创始人奥特曼加入微软)
 1. [警方辟谣“青岛出现打人事件”](https://so.toutiao.com/search?keyword=警方辟谣“青岛出现打人事件”)
 1. [巴以冲突已致双方超1.44万人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超1.44万人死亡)
-1. [乌尔善取关封神所有演员](https://so.toutiao.com/search?keyword=乌尔善取关封神所有演员)
-1. [专家解读人民币连续暴力拉升](https://so.toutiao.com/search?keyword=专家解读人民币连续暴力拉升)
 1. [中国女足最新集训名单：唐佳丽回归](https://so.toutiao.com/search?keyword=中国女足最新集训名单：唐佳丽回归)
-1. [阿根廷“特朗普”当选是拉美大乱征兆吗](https://so.toutiao.com/search?keyword=阿根廷“特朗普”当选是拉美大乱征兆吗)
-1. [河南联通回应强迫用户更换光猫](https://so.toutiao.com/search?keyword=河南联通回应强迫用户更换光猫)
 1. [马斯克呼吁披露解雇奥特曼内幕](https://so.toutiao.com/search?keyword=马斯克呼吁披露解雇奥特曼内幕)
-1. [阿根廷不会加入金砖国家？中方回应](https://so.toutiao.com/search?keyword=阿根廷不会加入金砖国家？中方回应)
 1. [专家：冯德莱恩访埃及出于多重考量](https://so.toutiao.com/search?keyword=专家：冯德莱恩访埃及出于多重考量)
-1. [云南对缅甸果敢发故障停电通知](https://so.toutiao.com/search?keyword=云南对缅甸果敢发故障停电通知)
 1. [以总理首次承认可能会失去国际支持](https://so.toutiao.com/search?keyword=以总理首次承认可能会失去国际支持)
-1. [药物养殖的罗氏虾是狠科技吗](https://so.toutiao.com/search?keyword=药物养殖的罗氏虾是狠科技吗)
 1. [曝水庆霞此前上任是高层介入](https://so.toutiao.com/search?keyword=曝水庆霞此前上任是高层介入)
 1. [俄军使用集束炸弹打击乌军阵地](https://so.toutiao.com/search?keyword=俄军使用集束炸弹打击乌军阵地)
-1. [24岁演员吴迪飞宣布退圈](https://so.toutiao.com/search?keyword=24岁演员吴迪飞宣布退圈)
-1. [鸿蒙系统明年或不兼容安卓](https://so.toutiao.com/search?keyword=鸿蒙系统明年或不兼容安卓)
 1. [台名嘴称赞解放军的区域拒止能力](https://so.toutiao.com/search?keyword=台名嘴称赞解放军的区域拒止能力)
-1. [男子长期健身后食用蛋白粉查出肾虚](https://so.toutiao.com/search?keyword=男子长期健身后食用蛋白粉查出肾虚)
-1. [女子疑坠楼身亡：孩子刚出生不久](https://so.toutiao.com/search?keyword=女子疑坠楼身亡：孩子刚出生不久)
 1. [哥哥离世同年妹妹确诊患重病](https://so.toutiao.com/search?keyword=哥哥离世同年妹妹确诊患重病)
-1. [胡锡进谈王自如奉承董明珠事件](https://so.toutiao.com/search?keyword=胡锡进谈王自如奉承董明珠事件)
 1. [我国心脑血管疾病防治水平不断提升](https://so.toutiao.com/search?keyword=我国心脑血管疾病防治水平不断提升)
 1. [日本福岛核污水第三轮排海20日结束](https://so.toutiao.com/search?keyword=日本福岛核污水第三轮排海20日结束)
-1. [男乘客拍打女列车员臀部被拘10日](https://so.toutiao.com/search?keyword=男乘客拍打女列车员臀部被拘10日)
 1. [外资机构竞相唱多A股](https://so.toutiao.com/search?keyword=外资机构竞相唱多A股)
 1. [司机逆行被逼退：让我一下不行？](https://so.toutiao.com/search?keyword=司机逆行被逼退：让我一下不行？)
 1. [中国女足将集训并出访美国](https://so.toutiao.com/search?keyword=中国女足将集训并出访美国)
 1. [ChatGPT之父以访客身份现身OpenAI](https://so.toutiao.com/search?keyword=ChatGPT之父以访客身份现身OpenAI)
 1. [专家：中美关系出现向好迹象](https://so.toutiao.com/search?keyword=专家：中美关系出现向好迹象)
 1. [时隔四年Letme正式回归RNG](https://so.toutiao.com/search?keyword=时隔四年Letme正式回归RNG)
-1. [澳大利亚碰瓷中国海军声呐有何图谋](https://so.toutiao.com/search?keyword=澳大利亚碰瓷中国海军声呐有何图谋)
 1. [茅盾文学奖获奖作家对话青年作家](https://so.toutiao.com/search?keyword=茅盾文学奖获奖作家对话青年作家)
 1. [以军袭击加沙又一医院已致12人死亡](https://so.toutiao.com/search?keyword=以军袭击加沙又一医院已致12人死亡)
 1. [新型储能开启黄金赛道](https://so.toutiao.com/search?keyword=新型储能开启黄金赛道)
@@ -54,7 +82,6 @@
 1. [美国新一批军援抵台：含1000挺机枪](https://so.toutiao.com/search?keyword=美国新一批军援抵台：含1000挺机枪)
 1. [加沙南部医院运转困难孕妇面临威胁](https://so.toutiao.com/search?keyword=加沙南部医院运转困难孕妇面临威胁)
 1. [斯诺克：中国球手接连打出147](https://so.toutiao.com/search?keyword=斯诺克：中国球手接连打出147)
-1. [哈维尔·米莱当选阿根廷新一任总统](https://so.toutiao.com/search?keyword=哈维尔·米莱当选阿根廷新一任总统)
 1. [80后男子选择躺平：存款75万三套房](https://so.toutiao.com/search?keyword=80后男子选择躺平：存款75万三套房)
 1. [媒体人热议水庆霞离任](https://so.toutiao.com/search?keyword=媒体人热议水庆霞离任)
 1. [乌拉圭总统抵达北京 卫兵列队敬礼](https://so.toutiao.com/search?keyword=乌拉圭总统抵达北京+卫兵列队敬礼)
@@ -97,7 +124,6 @@
 1. [台州渔民出海误捕红海龟果断放生](https://so.toutiao.com/search?keyword=台州渔民出海误捕红海龟果断放生)
 1. [第二张合资银行卡清算牌照获批](https://so.toutiao.com/search?keyword=第二张合资银行卡清算牌照获批)
 1. [入冬以来四川多地频现野生大熊猫](https://so.toutiao.com/search?keyword=入冬以来四川多地频现野生大熊猫)
-1. [呼吸道传染病交织 抗生素被滥用了吗](https://so.toutiao.com/search?keyword=呼吸道传染病交织+抗生素被滥用了吗)
 1. [詹姆斯距狄龙的尊重还差3分](https://so.toutiao.com/search?keyword=詹姆斯距狄龙的尊重还差3分)
 1. [世界最昂贵威士忌纪录被打破](https://so.toutiao.com/search?keyword=世界最昂贵威士忌纪录被打破)
 1. [曾在中国被判刑的两加拿大间谍闹内讧](https://so.toutiao.com/search?keyword=曾在中国被判刑的两加拿大间谍闹内讧)
@@ -107,9 +133,7 @@
 )
 1. [韩媒：中国客场不好踢](https://so.toutiao.com/search?keyword=韩媒：中国客场不好踢)
 1. [八村塁谈季中锦标赛：还没搞懂规则](https://so.toutiao.com/search?keyword=八村塁谈季中锦标赛：还没搞懂规则)
-1. [南宁“桂花牌”手表突然爆火](https://so.toutiao.com/search?keyword=南宁“桂花牌”手表突然爆火)
 1. [券商：A股市场在年末仍有回暖行情](https://so.toutiao.com/search?keyword=券商：A股市场在年末仍有回暖行情)
-1. [邱毅：蓝白合成局机会仍很大](https://so.toutiao.com/search?keyword=邱毅：蓝白合成局机会仍很大)
 1. [共同应答亚太发展“三问”](https://so.toutiao.com/search?keyword=共同应答亚太发展“三问”)
 1. [记者：詹姆斯这个年龄的表现不真实](https://so.toutiao.com/search?keyword=记者：詹姆斯这个年龄的表现不真实)
 1. [特朗普祝贺阿根廷特朗普当选总统](https://so.toutiao.com/search?keyword=特朗普祝贺阿根廷特朗普当选总统)
@@ -124,7 +148,6 @@
 1. [女儿被皮筋勒到手大哭吓到妈妈](https://so.toutiao.com/search?keyword=女儿被皮筋勒到手大哭吓到妈妈)
 1. [联通总部回应被曝套路用户更换光猫](https://so.toutiao.com/search?keyword=联通总部回应被曝套路用户更换光猫)
 1. [乌度卡：我们在场上做决策要更快](https://so.toutiao.com/search?keyword=乌度卡：我们在场上做决策要更快)
-1. [白岩松谈四川一地规定不叠被子罚款](https://so.toutiao.com/search?keyword=白岩松谈四川一地规定不叠被子罚款)
 1. [快递驿站老板拒绝送货上门辱骂客户](https://so.toutiao.com/search?keyword=快递驿站老板拒绝送货上门辱骂客户)
 1. [金莎回应签约孙丞潇](https://so.toutiao.com/search?keyword=金莎回应签约孙丞潇)
 1. [2022年我国初婚人数下降9.16%](https://so.toutiao.com/search?keyword=2022年我国初婚人数下降9.16%)
@@ -157,7 +180,6 @@
 1. [专打无人机的“酷炫大枪”](https://so.toutiao.com/search?keyword=专打无人机的“酷炫大枪”)
 1. [75岁司机遇溜车用肉身挡车被压身亡](https://so.toutiao.com/search?keyword=75岁司机遇溜车用肉身挡车被压身亡)
 1. [刘元春：明年经济将进一步企稳回升](https://so.toutiao.com/search?keyword=刘元春：明年经济将进一步企稳回升)
-1. [李佳航恭喜T1夺冠](https://so.toutiao.com/search?keyword=李佳航恭喜T1夺冠)
 1. [美媒：中国治理好有毒空气为何印度不行](https://so.toutiao.com/search?keyword=美媒：中国治理好有毒空气为何印度不行)
 1. [华为新机爆卖背后：负债达有史最高](https://so.toutiao.com/search?keyword=华为新机爆卖背后：负债达有史最高)
 1. [韩国总统祝贺T1夺冠](https://so.toutiao.com/search?keyword=韩国总统祝贺T1夺冠)
