--- a/archives/zhihu-search/2023-11-20.md
+++ b/archives/zhihu-search/2023-11-20.md
@@ -1,19 +1,21 @@
 # 2023-11-20
 
-共 17 条
+共 19 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Mon Nov 20 2023 18:00:41 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Nov 20 2023 19:00:39 GMT+0800 (China Standard Time) -->
 1. [法考备考攻略](https://www.zhihu.com/search?q=法考备考攻略)
 1. [考研政治](https://www.zhihu.com/search?q=考研政治)
 1. [考研数学](https://www.zhihu.com/search?q=考研数学)
 1. [考研英语](https://www.zhihu.com/search?q=考研英语)
 1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
-1. [国考北京考区考点安排](https://www.zhihu.com/search?q=国考北京考区考点安排)
+1. [西班牙vs格鲁吉亚全场数据](https://www.zhihu.com/search?q=西班牙vs格鲁吉亚全场数据)
 1. [考研需要买平板吗](https://www.zhihu.com/search?q=考研需要买平板吗)
-1. [北京国考考场分布](https://www.zhihu.com/search?q=北京国考考场分布)
+1. [体验一下哈尼村寨长街宴](https://www.zhihu.com/search?q=体验一下哈尼村寨长街宴)
 1. [30岁考公来得及吗](https://www.zhihu.com/search?q=30岁考公来得及吗)
 1. [法考主观题如何答题](https://www.zhihu.com/search?q=法考主观题如何答题)
+1. [国考北京考区考点安排](https://www.zhihu.com/search?q=国考北京考区考点安排)
+1. [北京国考考场分布](https://www.zhihu.com/search?q=北京国考考场分布)
 1. [鲁迅长孙周令飞谈ai写作](https://www.zhihu.com/search?q=鲁迅长孙周令飞谈ai写作)
 1. [专家把chatgpt之父挖到中国](https://www.zhihu.com/search?q=专家把chatgpt之父挖到中国)
 1. [碎纸机是干嘛用的](https://www.zhihu.com/search?q=碎纸机是干嘛用的)
